k8s/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
      - name: celery-worker
        image: <ACR_NAME>.azurecr.io/celery-worker:latest
        command: ["celery", "-A", "celery_app", "worker", "--loglevel=info"]
